--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "ueno-gatsby-starter",
-  "description": "Opinionated Gatsby starter by Ueno",
+  "name": "Antonio Almena Portfolio",
+  "description": "The portfolio of Antonio Almena",
   "scripts": {
   },
   "stack": "heroku-18",
