--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ueno-gatsby-starter",
-  "description": "Opinionated Gatsby starter by Ueno",
+  "name": "Portfolio",
+  "description": "Antonio Almena Portfolio using https://github.com/ueno-llc/ueno-gatsby-starter",
   "version": "1.0.0",
   "license": "MIT",
   "keywords": ["gatsby", "starter", "react", "typescript", "gatsby-starter", "ueno"],
   "contributors": [
     "Birkir Gudjonsson <birkir.gudjonsson@gmail.com>",
-    "Jérémy Barbet <jeremgraph@gmail.com>"
+    "Jérémy Barbet <jeremgraph@gmail.com>",
+    "Antonio Almena <antonio.almena.sf@gmail.com>"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ueno-llc/ueno-gatsby-starter"
+    "url": "https://github.com/9ntonio/ueno-gatsby-starter"
   },
   "scripts": {
     "dev": "gatsby develop",
