--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "Portfolio",
+  "name": "ueno-gatsby-starter",
   "description": "Antonio Almena Portfolio using https://github.com/ueno-llc/ueno-gatsby-starter",
   "version": "1.0.0",
   "license": "MIT",
-  "keywords": ["gatsby", "starter", "react", "typescript", "gatsby-starter", "ueno"],
+  "keywords": [
+    "gatsby",
+    "starter",
+    "react",
+    "typescript",
+    "gatsby-starter",
+    "ueno"
+  ],
   "contributors": [
     "Birkir Gudjonsson <birkir.gudjonsson@gmail.com>",
     "Jérémy Barbet <jeremgraph@gmail.com>",
@@ -30,13 +37,13 @@
     "gatsby-plugin-manifest": "2.0.13",
     "gatsby-plugin-react-helmet": "3.0.5",
     "gatsby-plugin-react-svg": "2.0.0",
-    "gatsby-plugin-sharp": "2.0.17",
+    "gatsby-plugin-sharp": "^2.0.31",
     "gatsby-plugin-typescript": "2.0.3",
     "gatsby-plugin-ueno": "2.0.1",
     "gatsby-source-graphql-universal": "^2.0.4",
     "gatsby-transformer-sharp": "2.1.10",
     "gsap": "2.0.2",
-    "gsap-tools": "1.0.9",
+    "gsap-tools": "^1.0.10",
     "lodash": "4.17.11",
     "react": "16.8.0",
     "react-dom": "16.8.0",
