updates to the package and app json files

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Antonio Almena Portfolio",
+  "name": "Antonio Almena",
   "description": "The portfolio of Antonio Almena",
   "scripts": {
   },
