--- a/package.json
+++ b/package.json
@@ -36,25 +36,28 @@
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-layout": "1.0.11",
     "gatsby-plugin-manifest": "2.0.13",
-    "gatsby-plugin-netlify": "^2.0.13",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "3.0.5",
+    "gatsby-plugin-netlify": "^2.1.4",
+    "gatsby-plugin-offline": "^2.2.5",
+    "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-react-svg": "2.0.0",
-    "gatsby-plugin-sharp": "^2.0.31",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-plugin-sitemap": "^2.2.6",
     "gatsby-plugin-typescript": "2.0.3",
     "gatsby-plugin-ueno": "2.0.1",
-    "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-source-filesystem": "^2.1.9",
     "gatsby-source-graphql-universal": "^2.0.4",
     "gatsby-transformer-sharp": "2.1.10",
     "gsap": "2.0.2",
-    "gsap-tools": "^1.0.10",
-    "lodash": "4.17.11",
+    "gsap-tools": "^1.0.12",
+    "lodash": "^4.17.15",
     "react": "16.8.0",
     "react-dom": "16.8.0",
     "react-helmet": "5.2.0",
-    "react-player": "^1.10.0"
+    "react-player": "^1.11.2"
   },
   "devDependencies": {
+    "gatsby-cli": "^2.7.29",
     "@babel/core": "7.2.2",
     "@types/gsap": "1.20.1",
     "@types/lodash": "4.14.119",
@@ -63,7 +66,7 @@
     "@types/react-dom": "16.8.0",
     "@types/react-helmet": "5.0.8",
     "@ueno/stylelint-config": "1.1.2",
-    "@ueno/tslint-config": "1.0.3",
+    "@ueno/tslint-config": "^1.0.3",
     "rimraf": "2.6.3",
     "stylelint": "9.9.0",
     "tslint": "5.12.1",
