--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "gatsby-plugin-manifest": "2.0.22",
     "gatsby-plugin-react-helmet": "3.0.8",
     "gatsby-plugin-react-svg": "2.1.0",
-    "gatsby-plugin-sharp": "2.0.25",
+    "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-plugin-typescript": "2.0.10",
     "gatsby-plugin-ueno": "2.0.1",
     "gatsby-source-graphql-universal": "^2.0.4",
     "gatsby-transformer-sharp": "2.1.15",
     "gsap": "2.1.2",
-    "gsap-tools": "1.0.9",
-    "lodash": "4.17.11",
+    "gsap-tools": "^1.0.12",
+    "lodash": "^4.17.15",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-helmet": "5.2.0"
