Updating node packges and source files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./node_modules/@ueno/tslint-config/tsconfig-react",
   "compilerOptions": {
     // Base directory to resolve non-relative module names.
     "baseUrl": "./src",
