--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
-    "extends": [
-        "config:base",
-        "monorepo:gatsby"
-    ],
-    "includeForks": true
+  "includeForks": true,
+  "extends": [
+      "config:base",
+      "monorepo:gatsby",
+      "schedule:daily"
+  ]
 }
