--- a/package.json
+++ b/package.json
@@ -54,10 +54,11 @@
     "gsap": "2.1.3",
     "gsap-tools": "1.0.12",
     "lodash": "4.17.15",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
-    "react-player": "1.12.0",
+    "react-player": "^1.14.2",
     "renovate": "^19.38.7",
     "tslint-origin-ordered-imports-rule": "1.2.2",
     "webpack": "^4.41.5"
@@ -68,8 +69,8 @@
     "@types/lodash": "4.14.122",
     "@types/node": "11.10.4",
     "@types/react": "16.8.6",
-    "@types/react-dom": "16.9.4",
-    "@types/react-helmet": "5.0.8",
+    "@types/react-dom": "16.9.5",
+    "@types/react-helmet": "5.0.15",
     "@ueno/stylelint-config": "1.1.2",
     "@ueno/tslint-config": "1.0.8",
     "rimraf": "3.0.0",
