--- a/package.json
+++ b/package.json
@@ -34,28 +34,26 @@
   "dependencies": {
     "cssnano": "^4.1.10",
     "gatsby": "^2.18.25",
-    "gatsby-image": "2.2.17",
+    "gatsby-image": "^2.2.39",
     "gatsby-plugin-config": "1.0.7",
-    "gatsby-plugin-layout": "1.1.6",
-    "gatsby-plugin-manifest": "2.2.13",
-    "gatsby-plugin-netlify": "2.1.11",
+    "gatsby-plugin-layout": "^1.1.21",
+    "gatsby-plugin-manifest": "^2.2.37",
+    "gatsby-plugin-netlify": "^2.1.31",
     "gatsby-plugin-offline": "3.0.32",
     "gatsby-plugin-postcss": "^2.1.19",
-    "gatsby-plugin-react-helmet": "3.1.6",
-    "gatsby-plugin-react-svg": "2.1.2",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "1.5.0",
-    "gatsby-plugin-sharp": "2.2.19",
-    "gatsby-plugin-sitemap": "2.2.10",
-    "gatsby-plugin-typescript": "2.1.6",
+    "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-plugin-sitemap": "^2.2.26",
+    "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-plugin-ueno": "^2.1.0",
-    "gatsby-source-filesystem": "2.1.21",
+    "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-graphql-universal": "3.1.11",
-    "gatsby-transformer-sharp": "2.2.13",
-    "gsap": "2.1.3",
+    "gatsby-transformer-sharp": "^2.3.13",
+    "gsap": "^3.0.5",
     "gsap-tools": "1.0.12",
-    "lodash": "4.17.15",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
     "react-player": "^1.14.2",
@@ -66,15 +64,15 @@
   "devDependencies": {
     "@babel/core": "7.8.3",
     "@types/gsap": "1.20.2",
-    "@types/lodash": "4.14.122",
-    "@types/node": "11.10.4",
-    "@types/react": "16.8.6",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.1.8",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "16.9.5",
     "@types/react-helmet": "5.0.15",
     "@ueno/stylelint-config": "1.1.2",
     "@ueno/tslint-config": "1.0.8",
     "rimraf": "3.0.0",
-    "stylelint": "9.10.1",
+    "stylelint": "^13.0.0",
     "tslint": "5.20.1",
     "tslint-react": "4.1.0",
     "typescript": "3.7.5"
