--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "gatsby build",
     "start": "gatsby serve --port ${PORT:-3000}",
     "clean": "rimraf .cache public",
-    "lint": "npm run tslint && npm run stylelint",
+    "lint": "yarn tslint && yarn stylelint",
     "tslint": "tslint --fix 'src/**/*.{ts,tsx}' -p .",
     "stylelint": "stylelint 'src/**/*.scss' --syntax scss"
   },
@@ -72,7 +72,7 @@
     "@ueno/stylelint-config": "1.1.2",
     "@ueno/tslint-config": "1.0.8",
     "rimraf": "3.0.0",
-    "stylelint": "^13.0.0",
+    "stylelint": "^8.0.0",
     "tslint": "5.20.1",
     "tslint-react": "4.1.0",
     "typescript": "3.7.5"
