--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-sitemap": "^2.2.26",
     "gatsby-plugin-typescript": "^2.1.26",
-    "gatsby-plugin-ueno": "^2.1.0",
+    "gatsby-plugin-ueno-fix": "^2.1.2",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-graphql-universal": "3.1.11",
     "gatsby-transformer-sharp": "^2.3.13",
