--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
     "gatsby-image": "2.2.45",
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-layout": "1.1.24",
-    "gatsby-plugin-manifest": "2.2.48",
+    "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-netlify": "2.1.35",
     "gatsby-plugin-offline": "3.0.42",
     "gatsby-plugin-postcss": "2.1.22",
     "gatsby-plugin-react-helmet": "3.1.24",
     "gatsby-plugin-react-svg": "3.0.0",
     "gatsby-plugin-robots-txt": "1.5.0",
-    "gatsby-plugin-sharp": "2.4.13",
+    "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-plugin-sitemap": "2.2.30",
     "gatsby-plugin-typescript": "2.2.5",
     "gatsby-plugin-ueno-fix": "2.1.3",
     "gatsby-source-filesystem": "2.1.57",
     "gatsby-source-graphql-universal": "3.1.11",
-    "gatsby-transformer-sharp": "2.3.19",
+    "gatsby-transformer-sharp": "^2.4.1",
     "gsap": "3.2.4",
     "gsap-tools": "1.0.12",
     "postcss-preset-env": "6.7.0",
@@ -80,6 +80,6 @@
   },
   "resolutions": {
     "acorn": "^7.1.1",
-    "minimist": "^1.2.2"
+    "minimist": "^1.2.3"
   }
 }
