--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,11 @@
 {
   "includeForks": true,
+  "packageRules": [
+    {
+      "updateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ],
   "extends": [
       "config:base",
       "monorepo:gatsby",
