--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "gatsby serve --port ${PORT:-3000}",
     "clean": "rimraf .cache public",
     "lint": "npm run prettier && npm run tslint && npm run stylelint",
-    "tslint": "tslint --fix 'src/**/*.{ts,tsx}' --project src/tsconfig.json",
+    "tslint": "tslint --fix 'src/**/*.{ts,tsx}' --project tsconfig.json",
     "stylelint": "stylelint 'src/**/*.{ts,tsx}'",
     "prettier": "prettier --list-different '**/*.{ts,tsx,js,jsx,json,md}'"
   },
@@ -65,6 +65,7 @@
     "gatsby-plugin-react-helmet": "3.2.1",
     "gatsby-plugin-react-svg": "3.0.0",
     "gatsby-plugin-sharp": "2.5.3",
+    "gatsby-plugin-styled-components": "3.2.1",
     "gatsby-plugin-typescript": "2.3.1",
     "gatsby-transformer-sharp": "2.4.3",
     "lodash": "4.17.15",
@@ -82,8 +83,7 @@
     "@types/react-dom": "16.9.6",
     "@types/react-helmet": "5.0.15",
     "@types/styled-components": "5.0.1",
-    "@ueno/stylelint-config": "1.1.2",
-    "@ueno/tslint-config": "1.0.8",
+    "prettier": "2.0.2",
     "rimraf": "3.0.2",
     "stylelint": "13.2.1",
     "stylelint-config-recommended": "3.0.0",
