--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "description": "Antonio Almena's Portfolio extended from https://github.com/ueno-llc/ueno-gatsby-starter",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "license": "MIT",
   "keywords": [
     "gatsby",
@@ -27,59 +27,107 @@
     "build": "gatsby build",
     "start": "gatsby serve --port ${PORT:-3000}",
     "clean": "rimraf .cache public",
-    "lint": "yarn tslint && yarn stylelint",
-    "tslint": "tslint --fix 'src/**/*.{ts,tsx}' -p .",
-    "stylelint": "stylelint 'src/**/*.scss' --syntax scss"
+    "lint": "yarn prettier && yarn tslint && yarn stylelint",
+    "tslint": "tslint --fix 'src/**/*.{ts,tsx}' --project tsconfig.json",
+    "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
+    "prettier": "prettier --check '**/*.{ts,tsx,js,jsx,json,md}'",
+    "prettier-fix": "prettier --write '**/*.{ts,tsx,js,jsx,json,md}'",
+    "stylelint-fix": "stylelint 'src/**/*.scss' --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,md}": [
+      "prettier --write"
+    ],
+    "*.{ts,tsx}": [
+      "tslint --fix"
+    ]
+  },
+  "stylelint": {
+    "extends": "stylelint-config-recommended",
+    "rules": {
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": [
+            "if",
+            "else",
+            "mixin",
+            "each",
+            "include",
+            "function",
+            "return",
+            "warn",
+            "for"
+          ]
+        }
+      ],
+      "selector-pseudo-class-no-unknown": [
+        true,
+        {
+          "ignorePseudoClasses": [
+            "global"
+          ]
+        }
+      ]
+    }
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "printWidth": 100
   },
   "dependencies": {
-    "cssnano": "4.1.10",
-    "gatsby": "2.23.21",
-    "gatsby-image": "2.4.12",
+    "gatsby": "2.23.17",
+    "gatsby-image": "2.3.1",
     "gatsby-plugin-config": "1.0.7",
-    "gatsby-plugin-layout": "1.3.9",
-    "gatsby-plugin-manifest": "2.4.17",
-    "gatsby-plugin-netlify": "2.3.10",
-    "gatsby-plugin-offline": "3.2.16",
-    "gatsby-plugin-postcss": "2.3.9",
-    "gatsby-plugin-react-helmet": "3.3.9",
+    "gatsby-plugin-layout": "1.2.1",
+    "gatsby-plugin-manifest": "2.3.3",
+    "gatsby-plugin-react-helmet": "3.2.1",
     "gatsby-plugin-react-svg": "3.0.0",
-    "gatsby-plugin-robots-txt": "1.5.1",
-    "gatsby-plugin-sharp": "2.6.18",
+    "gatsby-plugin-sharp": "2.5.3",
+    "gatsby-plugin-typescript": "2.3.1",
+    "gatsby-transformer-sharp": "2.4.3",
     "gatsby-plugin-sitemap": "2.4.10",
-    "gatsby-plugin-typescript": "2.4.13",
-    "gatsby-plugin-ueno-fix": "2.1.3",
+    "gatsby-plugin-robots-txt": "1.5.1",
+    "gatsby-plugin-offline": "3.2.16",
+    "gatsby-plugin-netlify": "2.3.10",
     "gatsby-source-filesystem": "2.3.18",
     "gatsby-source-graphql-universal": "3.4.0",
-    "gatsby-transformer-sharp": "2.5.10",
-    "gsap": "3.3.4",
-    "gsap-tools": "1.0.12",
-    "postcss-preset-env": "6.7.0",
+    "lodash": "4.17.15",
+    "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "6.1.0",
+    "react-helmet": "5.2.1",
     "react-html-parser": "2.0.2",
     "react-player": "2.4.0",
     "renovate": "21.23.2",
-    "tslint-origin-ordered-imports-rule": "1.2.2",
-    "webpack": "4.43.0"
+    "gsap": "3.3.4",
+    "gsap-tools": "1.0.12"
   },
   "devDependencies": {
-    "@babel/core": "7.10.4",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-decorators": "7.8.3",
     "@types/gsap": "1.20.2",
-    "@types/lodash": "4.14.157",
-    "@types/node": "13.13.12",
-    "@types/react": "16.9.41",
-    "@types/react-dom": "16.9.8",
-    "@types/react-helmet": "6.0.0",
-    "@ueno/stylelint-config": "1.1.2",
-    "@ueno/tslint-config": "1.0.8",
+    "@types/lodash": "4.14.149",
+    "@types/node": "13.11.0",
+    "@types/react": "16.9.32",
+    "@types/react-dom": "16.9.6",
+    "@types/react-helmet": "5.0.15",
+    "classnames": "2.2.6",
+    "classnames-loader": "2.1.0",
+    "node-sass": "4.13.1",
+    "prettier": "2.0.5",
     "rimraf": "3.0.2",
+    "sass-loader": "8.0.2",
     "stylelint": "13.6.1",
-    "tslint": "6.1.2",
-    "tslint-react": "4.1.0",
-    "typescript": "3.9.6"
-  },
-  "resolutions": {
-    "acorn": "^7.1.1",
-    "minimist": "^1.2.2"
+    "stylelint-config-recommended": "3.0.0",
+    "tslint": "6.1.1",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-react": "4.2.0",
+    "typescript": "3.8.3"
   }
 }
