--- a/package.json
+++ b/package.json
@@ -87,26 +87,26 @@
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-layout": "1.2.1",
     "gatsby-plugin-manifest": "2.3.3",
+    "gatsby-plugin-netlify": "2.3.10",
+    "gatsby-plugin-offline": "3.2.16",
     "gatsby-plugin-react-helmet": "3.2.1",
     "gatsby-plugin-react-svg": "3.0.0",
-    "gatsby-plugin-sharp": "2.5.3",
-    "gatsby-plugin-typescript": "2.3.1",
-    "gatsby-transformer-sharp": "2.4.3",
-    "gatsby-plugin-sitemap": "2.4.10",
     "gatsby-plugin-robots-txt": "1.5.1",
-    "gatsby-plugin-offline": "3.2.16",
-    "gatsby-plugin-netlify": "2.3.10",
+    "gatsby-plugin-sharp": "2.5.3",
+    "gatsby-plugin-sitemap": "2.4.10",
+    "gatsby-plugin-typescript": "2.3.1",
     "gatsby-source-filesystem": "2.3.18",
     "gatsby-source-graphql-universal": "3.4.0",
+    "gatsby-transformer-sharp": "2.4.3",
+    "gsap": "3.3.4",
+    "gsap-tools": "1.0.12",
     "lodash": "4.17.15",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "5.2.1",
     "react-html-parser": "2.0.2",
     "react-player": "2.4.0",
-    "renovate": "21.23.2",
-    "gsap": "3.3.4",
-    "gsap-tools": "1.0.12"
+    "renovate": "21.23.2"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
