addressing lighthouse notes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "keywords": [
     "gatsby",
-    "starter",
     "react",
     "typescript",
     "gatsby-starter",
@@ -32,7 +31,8 @@
     "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
     "prettier": "prettier --check '**/*.{ts,tsx,js,jsx,json,md}'",
     "prettier-fix": "prettier --write '**/*.{ts,tsx,js,jsx,json,md}'",
-    "stylelint-fix": "stylelint 'src/**/*.scss' --fix"
+    "stylelint-fix": "stylelint 'src/**/*.scss' --fix",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "husky": {
     "hooks": {
@@ -89,6 +89,7 @@
     "gatsby-plugin-manifest": "2.3.3",
     "gatsby-plugin-netlify": "2.3.10",
     "gatsby-plugin-offline": "3.2.16",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "3.2.1",
     "gatsby-plugin-react-svg": "3.0.0",
     "gatsby-plugin-robots-txt": "1.5.1",
