--- a/renovate.json
+++ b/renovate.json
@@ -2,8 +2,18 @@
   "includeForks": true,
   "packageRules": [
     {
-      "updateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
+      "minor": {
+        "automerge": true
+      },
+      "pin": {
+        "automerge": true
+      },
+      "patch": {
+        "automerge": true
+      },
+      "digest": {
+        "automerge": true
+      }
     }
   ],
   "extends": [
